--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-  <title>Hola Hacktoberfest</title>
+  <title>¡Hola, Hacktoberfest!</title>
 </head>
 <body>
   <section class="hero is-dark">
@@ -14,7 +14,7 @@
           ¡Hola Hacktoberfest!
         </h1>
         <h2 class="subtitle">
-          La mejor celebración de Octubre
+          La mejor celebración de Octubre, haz tu primera contribución
         </h2>
         <a class="button is-light" href="https://hacktoberfest.digitalocean.com/">Ir al registro</a>
       </div>
