--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           <li>
             <a href="https://github.com/mauricio-chavez">Mauricio Chávez</a>
           </li>
+          <li>
+            <a href="https://github.com/heavyMachineGun">Nestor Mejia Perez</a>
+          </li>
         </ul>
       </div>
     </div>
